# ai-pr-collision-lab

./: .gitignore  AGENTS.md  CLAUDE.md  DATA_HANDLING.md  README.md  demo-manifest.json  pyproject.toml
.github/workflows/: fixtures.yml
orders/: __init__.py  catalog.py  pricing.py  receipt.py
scripts/: check_docs.py  materialize_fixtures.py  verify_fixtures.py
tests/: test_pricing.py  test_receipt.py
