[build-system]
requires = ["setuptools>=69,<81"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-pr-collision-lab"
version = "1.0.0"
description = "Reproducible Veripsa two-PR collision walkthrough fixture"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8,<10"]

[tool.setuptools]
packages = ["orders"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
